Bug 148366 - FILEOPEN: DOCX: Incorrect page break
Summary: FILEOPEN: DOCX: Incorrect page break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-04-04 12:11 UTC by Xisco Faulí
Modified: 2024-05-30 11:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.4 master (233.00 KB, image/png)
2022-04-04 12:11 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-04-04 12:11:22 UTC
Created attachment 179305 [details]
Comparison MSO 2010 and LibreOffice 7.4 master

Steps to reproduce:
1. Open attachment 94507 [details] from bug 75318

-> The document has 3 pages and the image and table of page 1 are displayed in page 2. See comparison


Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 9f0e19721bb598c75835cfa94f4158085f81288e
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-04-04 12:12:16 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=f86d1482bef285f90079b5130e410646db96cf58

author	Miklos Vajna <vmiklos@collabora.com>	2022-03-08 08:42:44 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2022-03-08 12:25:55 +0100
commit f86d1482bef285f90079b5130e410646db96cf58 (patch)
tree ca1d8c70df1e1fdc62df3ffb72cf345366cb129d
parent 3455ef6eff0edb15b59d4e8818a1ce8f54b4454b (diff)
sw clearing breaks: add DOCX import

Bisected with: bibisect-linux64-7.4

Adding Cc: to Miklos Vajna
Comment 2 Commit Notification 2022-04-05 15:53:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/61888e49d6eee55197ca1c27b4b023f9b2108d48

tdf#148366 sw clearing breaks: fix handling of anchored objs from header/footer

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.