tdf#148366 sw clearing breaks: fix handling of anchored objs from header/footer

Regression from commit f86d1482bef285f90079b5130e410646db96cf58 (sw
clearing breaks: add DOCX import, 2022-03-08), the trouble was that we
considered an anchored object from the header for text wrapping, while
this anchored object was in the background in Word.

(cherry picked from commit 61888e49d6eee55197ca1c27b4b023f9b2108d48)

Change-Id: I806cc91ce1eb390c02cbff2defa4cb47fde86853